change 2 -adding picture

--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -72,7 +72,7 @@
             <a href="#" class="btn">Contact Me</a>
           </div>
           </div>
-          
+
       </div>
     </section>
 
@@ -88,6 +88,16 @@
       <div class="skills-content">
         <div class="box">
           <img src="melionpics/pic7.jpeg" />
+        </div>
+      </div>
+      <div class="skills-content">
+        <div class="box">
+          <img src="melionpics/pic9.jpeg" />
+        </div>
+      </div>
+      <div class="skills-content">
+        <div class="box">
+          <img src="melionpics/pi8.jpeg" />
         </div>
       </div>
     </section>
