added back my journey section

--- a/Portfolio/home.html
+++ b/Portfolio/home.html
@@ -38,6 +38,15 @@
            <a href="#" class="btn">Hire Me</a>
         </div>
     </section>
+
+    
+    <section class="mini-intro" id="mini-intro">
+        <div class="main-text">
+            <h2>My Journey</h2>
+            <h4>As a passionate and upcoming artist and developer, I aim to achieve well known and intuitive sites for users and also help them explore the world of art</h4>
+        </div>
+
+    
     <script type="text/javascript" src="javascript/main.js"></script>
 </body>
 </html>
