Final change on adding links to my social media

--- a/Portfolio/contact.html
+++ b/Portfolio/contact.html
@@ -37,27 +37,27 @@
             <p></p>
             <div class="contact-list"> 
                 <h4>Location:</h4>
-                <li><a href="#">Farapark Estate, Lagos-Ajah, Lekki.</a></li>
+                 <h4 id="fara">Farapark Estate, Lagos-Ajah, Lekki.</h4>
                 <h4>Email:</h4>
                 <li><a href="https://mail.google.com/mail/u/0/#inbox">bosahmelogo@gmail.com</a></li>
                 <h4>Phone number:</h4>
                 <li><a href="#">07012588907</a></li>
             </div>
             <div class="contact-icons">
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-snapchat' ></i></a>
-                <a href="#"><i class='bx bxl-tiktok' ></i></a>
+                <a href="https://www.linkedin.com/feed/"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://web.facebook.com/"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/paulabosah/"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://web.snapchat.com/"><i class='bx bxl-snapchat' ></i></a>
+                <a href="https://www.tiktok.com/"><i class='bx bxl-tiktok' ></i></a>
             </div>
         </div>
 
         <div class="contact-form">
-            <form action="">
-                <input type="" placeholder=" Name" required>
+            <form action="post">
+                <input type="text" placeholder=" Name" required>
                 <input type="email" placeholder="Email" required>
                 <input type="tel" placeholder="Phone number" required>
-                <textarea name="" id="" cols="40" rows="10" placeholder="Your Job Description"
+                <textarea name="information" id="" cols="40" rows="10" placeholder="Your Job Description"
                 required></textarea>
                 <input type="submit" value="Submit" class="send" >
             </form>
